--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ mysqlclient==1.4.6
 numpy==1.18.4
 protobuf==3.12.1
 PyJWT==1.7.1
+pyodbc==4.0.30
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2019.3
