--- a/requirements.txt
+++ b/requirements.txt
@@ -19,10 +19,11 @@ PyJWT==1.7.1
 pyodbc==4.0.30
 python-dateutil==2.8.1
 python-editor==1.0.4
+pytz==2019.3
 requests==2.24.0
+six==1.14.0
 soupsieve==2.0.1
 SQLAlchemy==1.3.17
 twilio==6.42.0
 urllib3==1.25.9
 Werkzeug==1.0.1
-
