--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,10 @@ SQLAlchemy==1.3.17
 twilio==6.42.0
 urllib3==1.25.9
 Werkzeug==1.0.1
+
+argparse~=1.4.0
+pip~=20.1.1
+python-dotenv~=0.13.0
+unittest2~=1.1.0
+setuptools~=47.3.1
+numpy~=1.19.0
