--- a/requirements.txt
+++ b/requirements.txt
@@ -34,3 +34,15 @@ python-dotenv~=0.13.0
 unittest2~=1.1.0
 setuptools~=47.3.1
 numpy~=1.19.0
+cryptography~=2.9.2
+keyring~=21.1.1
+Babel~=2.8.0
+Pygments~=2.6.1
+colorama~=0.4.3
+cffi~=1.14.0
+ipython~=7.16.1
+greenlet~=0.4.16
+traceback2~=1.4.0
+linecache2~=1.0.0
+attrs~=19.3.0
+decouple~=0.0.7
