--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-SECRET_KEY=
-DEBUG=
-SERVER =
-DATABASE =
-PASSWORD =
+export SECRET_KEY= in terminal run python3 -c 'import secrets; print(secrets.token_hex(50))' to generate
+export DEBUG= true in development false in production
+export SERVER = server name
+export DATABASE = database name
+export PASSWORD = database password
