barcode read but not interpreted

--- a/.env.template
+++ b/.env.template
@@ -2,4 +2,5 @@ export SECRET_KEY= in terminal run python3 -c 'import secrets; print(secrets.tok
 export DEBUG= true in development false in production
 export SERVER = server name
 export DATABASE = database name
+export NAME= azure username
 export PASSWORD = database password
