--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,58 @@
 alembic==1.4.2
+appnope==0.1.0
+attrs==19.3.0
+Babel==2.8.0
+backcall==0.2.0
 beautifulsoup4==4.9.1
 bs4==0.0.1
 certifi==2020.6.20
+cffi==1.14.2
 chardet==3.0.4
 click==7.1.2
+colorama==0.4.3
+cryptography==2.9.2
+decorator==4.4.2
+decouple==0.0.7
 Flask==1.1.2
 Flask-Migrate==2.5.3
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.3
+greenlet==0.4.16
 idna==2.9
+ipython==7.16.1
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
+jedi==0.17.2
 Jinja2==2.11.2
+keyring==21.1.1
+linecache2==1.0.0
 lxml==4.5.1
 Mako==1.1.3
 MarkupSafe==1.1.1
+opencv-python==4.4.0.46
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.7
 protobuf==3.12.2
+ptyprocess==0.6.0
+pycparser==2.20
+Pygments==2.6.1
 PyJWT==1.7.1
 pyodbc==4.0.30
 python-dateutil==2.8.1
+python-dotenv==0.13.0
 python-editor==1.0.4
 pytz==2019.3
+pyzbar==0.1.8
 requests==2.24.0
 six==1.14.0
 soupsieve==2.0.1
 SQLAlchemy==1.3.17
+traceback2==1.4.0
+traitlets==5.0.4
 twilio==6.42.0
+unittest2==1.1.0
 urllib3==1.25.9
+wcwidth==0.2.5
 Werkzeug==1.0.1
-
-argparse~=1.4.0
-pip~=20.1.1
-python-dotenv~=0.13.0
-unittest2~=1.1.0
-setuptools~=47.3.1
-numpy~=1.19.0
-cryptography~=2.9.2
-keyring~=21.1.1
-Babel~=2.8.0
-Pygments~=2.6.1
-colorama~=0.4.3
-cffi~=1.14.0
-ipython~=7.16.1
-greenlet~=0.4.16
-traceback2~=1.4.0
-linecache2~=1.0.0
-attrs~=19.3.0
-decouple~=0.0.7
