--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ ptyprocess==0.7.0
 pycparser==2.21
 Pygments==2.6.1
 PyJWT==1.7.1
+pyodbc==4.0.32
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-editor==1.0.4
