--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ lxml==4.5.1
 Mako==1.1.3
 MarkupSafe==1.1.1
 numpy==1.21.6
+pandas==1.4.2
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -45,7 +46,7 @@ pyodbc==4.0.32
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-editor==1.0.4
-pytz==2019.3
+pytz==2022.1
 requests==2.24.0
 schema==0.7.5
 six==1.14.0
